--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"type": "module",
 	"scripts": {
 		"start": "node src/index.js",
+		"dev-build": "parcel build src/client/index.html --no-optimize",
 		"dev": "parcel src/client/index.html",
 		"build": "parcel build src/client/index.html"
 	},
@@ -21,10 +22,7 @@
 	},
 	"homepage": "https://github.com/zisra/skin-repo#readme",
 	"dependencies": {
-		"express": "^4.18.2",
-		"halfmoon": "^1.1.1"
-	},
-	"devDependencies": {
+		"express": "^4.18.2", 
 		"parcel": "^2.8.2"
 	}
 }
