--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"homepage": "https://github.com/zisra/skin-repo#readme",
 	"dependencies": {
+		"archiver": "^5.3.1",
 		"express": "^4.18.2",
 		"parcel": "^2.8.2"
 	}
