--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
 	"type": "module",
 	"scripts": {
 		"start": "node src/index.js",
-		"build:dev": "vite build src/client --watch",
-		"build": "vite build src/client"
+		"build": "vite build src/client",
+		"build:dev": "vite dev src/client",
+		"tools:sortSkins": "node scripts/sortSkins.js"
 	},
 	"repository": {
 		"type": "git",
