--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
 		"express": "^4.18.2",
 		"pixi.js": "^7.2.4",
 		"vite": "^4.3.9"
+	},
+	"devDependencies": {
+		"@types/archiver": "^5.3.2",
+		"@types/express": "^4.17.17"
 	}
 }
