--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"homepage": "https://github.com/zisra/skin-lib#readme",
 	"dependencies": {
 		"archiver": "^5.3.1",
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"pixi.js": "^7.2.4",
 		"vite": "^4.3.9"
